; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_ls-files.c_ce_excluded.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_ls-files.c_ce_excluded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dir_struct = type { i32 }
%struct.index_state = type { i32 }
%struct.cache_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dir_struct*, %struct.index_state*, i8*, %struct.cache_entry*)* @ce_excluded to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ce_excluded(%struct.dir_struct* %0, %struct.index_state* %1, i8* %2, %struct.cache_entry* %3) #0 {
  %5 = alloca %struct.dir_struct*, align 8
  %6 = alloca %struct.index_state*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.cache_entry*, align 8
  %9 = alloca i32, align 4
  store %struct.dir_struct* %0, %struct.dir_struct** %5, align 8
  store %struct.index_state* %1, %struct.index_state** %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct.cache_entry* %3, %struct.cache_entry** %8, align 8
  %10 = load %struct.cache_entry*, %struct.cache_entry** %8, align 8
  %11 = call i32 @ce_to_dtype(%struct.cache_entry* %10)
  store i32 %11, i32* %9, align 4
  %12 = load %struct.dir_struct*, %struct.dir_struct** %5, align 8
  %13 = load %struct.index_state*, %struct.index_state** %6, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = call i32 @is_excluded(%struct.dir_struct* %12, %struct.index_state* %13, i8* %14, i32* %9)
  ret i32 %15
}

declare dso_local i32 @ce_to_dtype(%struct.cache_entry*) #1

declare dso_local i32 @is_excluded(%struct.dir_struct*, %struct.index_state*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
